[Added] set up basic product endpoints
