# src/openfoodfact/openfoodfact.controller.ts
@@ -1,0 +1,4 @@
+import { Controller } from '@nestjs/common';
+
+@Controller('openfoodfact')
+export class OpenfoodfactController {}
